[gd_scene load_steps=5 format=3 uid="uid://dojkqhtsd73go"]

[ext_resource type="PackedScene" uid="uid://cj7vywxbe73c1" path="res://ui/VolumeBars.tscn" id="1"]
[ext_resource type="Script" path="res://ui/PauseMenu.gd" id="2"]
[ext_resource type="Theme" uid="uid://briaychot8p50" path="res://ui/MainUITheme.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://cvean8gyhgqdr" path="res://ui/relic_show_row.tscn" id="4_iahc1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3")
color = Color(0.28, 0.28, 0.28, 1)

[node name="ResumeButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -190.0
offset_right = 255.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Retry" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -142.0
offset_right = 255.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry Level"

[node name="QuitButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.5
offset_top = -68.0
offset_right = 107.5
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit to Menu"

[node name="VolumeBars" parent="ColorRect" instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -214.0
offset_right = -4.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_top = 33.0
offset_right = 76.0
offset_bottom = 83.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "PAUSED"

[node name="RelicSelectRow" parent="ColorRect" instance=ExtResource("4_iahc1")]
layout_mode = 0
offset_left = 310.0
offset_top = 250.0
offset_right = 867.0
offset_bottom = 332.0

[node name="RelicSelectRow2" parent="ColorRect" instance=ExtResource("4_iahc1")]
layout_mode = 0
offset_left = 310.0
offset_top = 353.0
offset_right = 867.0
offset_bottom = 435.0
index = 1

[node name="RelicSelectRow3" parent="ColorRect" instance=ExtResource("4_iahc1")]
layout_mode = 0
offset_left = 310.0
offset_top = 456.0
offset_right = 867.0
offset_bottom = 538.0
index = 2

[connection signal="pressed" from="ColorRect/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ColorRect/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="ColorRect/QuitButton" to="." method="_on_QuitButton_pressed"]
